--- a/shard.yml
+++ b/shard.yml
@@ -7,3 +7,11 @@ authors:
 crystal: 0.34.0
 
 license: MIT
+
+dependencies:
+  mini_redis:
+    github: vladfaust/mini_redis
+    version: ~> 0.2.0
+  
+  suzuri:
+    github: busyloop/suzuri
