--- a/shard.yml
+++ b/shard.yml
@@ -1,14 +1,13 @@
 name: echo
-version: 0.1.0
+version: 0.1.1
 
 authors:
   - Elias J. Perez <eliasjpr@gmail.com>
 
-crystal: 0.34.0
+crystal: ">= 0.34.0"
 
 license: MIT
 
 dependencies:
   redis:
     github: stefanwille/crystal-redis
-    version: ~> 2.6.0
